Remove a few occurrences of we and our

--- a/chap-conclusion.tex
+++ b/chap-conclusion.tex
@@ -20,4 +20,4 @@ Given how common the usage of interleaved shading is, it is surprising that litt
 
 There is still potential in the Clustered Deferred Shading technique, for instance by using surface normals for more efficient culling. Mipmapping the ISMs and using them for culling, performing an early shadow lookup for entire clusters of fragments, would be interesting as well.
 
-However, we would consider the final gathering phase to already be quite fast and not detrimental to quality. While rendering the ISMs is fast as well, their quality is lacking and limiting the potential use of the presented technique. Improving their precision, e.\,g., by improving the point sampling or surface reconstruction or investigating triangle-based approaches, is in our view the path with the largest potential benefit.
+However, the final gathering phase is quite fast at least on high-end hardware, and, more importantly,  not detrimental to quality. While rendering the ISMs is fast as well, their quality is lacking and limiting the potential use of the presented technique. Improving their precision, e.\,g., by improving the point sampling or surface reconstruction or investigating triangle-based approaches, is in our view the path with the largest potential benefit.
