--- a/chap-implementation.tex
+++ b/chap-implementation.tex
@@ -4,7 +4,8 @@
 \chapter{Implementation}
 \label{chap:implementation}
 
-\todo{mention repository. decide on repository name, and maybe github name. give the repository a license.}
+This chapter will detail the implementation of the presented techniques. The next two sections will give an overview over the software as a whole and on the rendering pipeline, while the subsequent four sections describe the implementation of the RSM generation, ISM rendering, interleaved shading and clustered deferred shading.
+
 
 \section{Used Framework and Libraries}
 
