--- a/chap-results.tex
+++ b/chap-results.tex
@@ -4,7 +4,7 @@
 \chapter{Results and Discussion}
 \label{chap:results}
 
-This chapter details the performance and rendering quality characteristics of the implemented techniques and examines their memory usage. For each technique, it will subsequently discuss the up- and downsides and identify alternatives.
+This chapter details the performance and rendering quality characteristics of the implemented techniques and examines their memory usage. For each technique, it will subsequently discuss the up- and downsides.
 
 \section{Scenes, Settings and Testing System}
 \label{sec:results:settings}
@@ -55,7 +55,7 @@ The VPL sampling itself takes only several microseconds and is negligible. Bear 
   \begin{tabular}{@{}c@{}}
     \includegraphics[width=1.0\textwidth]{screenshots/RSM_unfavorable} \\
   \end{tabular}
-  \caption{A visualization of inefficiently placed VPLs. Since there is no further geometry above them that could be illuminated, they do not contribute to the final image.}
+  \caption{A visualization of inefficiently placed VPLs. Each of the brigth spots is a VPL. Here, they are all placed on the roof pointing upwards. Since there is no further geometry above them that could be illuminated, they do not contribute to the final image.}
   \label{fig:results:RSMUnfavorable}
 \end{figure}
 
@@ -68,15 +68,10 @@ An additional downside of the naive sampling is the poor temporal stability when
 
 \section{ISM Rendering}
 
-\subsection{Quality, Performance and Memory Usage}
+This section presents the results for visibility testing using Imperfect Shadow Maps. The next three subsections will show the outcome in terms of quality, performance and memory usage. The technique does not handle high geometric complexity of the test scenes well; this is detailed in the fourth subsection. Afterwards, the two different ISM renderers are compared and the suitability of ISMs for global illumination in general is discussed.
 
 
-
-
-%\Cref{fig:???} shows the Crytek Sponza scene rendered using ISMs created by the splat renderer (a) and the single-pixel renderer (b). A section of the ISM texture is shown for each renderer in the lower row.
-
-
-\subsubsection{Quality}
+\subsection{Quality}
 \label{sec:results:ism:quality}
 
 \begin{figure}[htb]
@@ -90,6 +85,7 @@ An additional downside of the naive sampling is the poor temporal stability when
 \end{figure}
 
 \Cref{fig:results:isms} shows a few ISMs rendered with the splat and single-pixel renderer. The imperfections do show, and not only through the low resolutions. The distortion of the surface silhouettes by the splat renderer or postprocessing contribute their part, making it hard to identify which part of the Crytek Sponza is shown. However, keep in mind that ???
+\todo{???}
 
 \begin{figure}[htb]
 \centering
@@ -151,7 +147,7 @@ Our implementation hides some of the inaccuracies of ISMs by using a relatively 
 \todo{for single-pixel-renderer: maybe show one full-size shadow map to show this *can* work}
 
 
-\subsubsection{Performance}
+\subsection{Performance}
 \label{sec:results:ism:performance}
 
 \begin{table}[h]
@@ -216,7 +212,7 @@ Since the presented implementation uses no adaptivity, these numbers are indepen
 \todo{Impact of packing?}
 
 
-\subsubsection{Memory Usage}
+\subsection{Memory Usage}
 \label{sec:results:ism:memory}
 
 The point splat renderer uses no more memory than the ISM texture itself requires, which is 8\,MB for a 2048\,px² 16-bit depth buffer.
@@ -227,7 +223,7 @@ The additional textures used are the render target of the single-pixel renderer 
 Added together, the single-pixel renderer uses a total of 79\,MB. There is some room for optimization left: For instance, one channel of the mipmap levels is unused (OpenGL does not offer three-channel images), and in some places, using 16-bit floats instead of 32-bit float might be sufficient.
 
 
-\subsubsection{Problems with High Geometric Density}
+\subsection{Problems with High Geometric Density}
 \label{sec:results:ism:densityProblems}
 
 As a more demanding test case is the San Miguel scene with 7.9M triangles. The most apparent problem of the presented implementation is the lack of adaptivity to the current viewport in addition to the lack of LOD methods. As a result, all 7.9M triangles are used every frame to render the ISMs, with corresponding performance results: The point collection phase of the single-pixel renderer now takes 12.0\,ms, while the point rendering uses an additional 5.3\,ms. The time needed by the postprocessing is unchanged since it works on fixed resolution textures. The splat renderer uses 12.0\,ms, which is the exact same amount of time as the point collection phase of the single-pixel renderer, even though the latter does no rasterization work. This demonstrates how this process is bottlenecked by geometric complexity.
@@ -417,5 +413,7 @@ An impression of the amount of overhead introduced by clustered shading is given
 With a low culling rate, clustered shading actually slows down the final gathering phase by 0.46\,ms. While 0.19\,ms of these are fixed costs added by the clustering and light list calculation phases, the final gathering shader itself got 0.27\,ms slower as well. This might be caused by the indirection when accessing lights, since instead of reading from the light buffer directly, the light list with indices is accessed first before reading the light buffer with a dynamic index. Another explanation might be the divergent data flow, since threads from the same work group can access different light lists and thus different light data and shadow maps, possibly hurting cache efficiency.
 
 As discussed in section \Cref{sec:impl:clusteredShading}, clustered shading consumes about 2\,MB of memory. The tiled shading algorithm however, being integrated into the final gathering shader, uses no additional VRAM at all.
+
+\subsubsection{Discussion}
 
 The presented measurements make tiled shading seem like a clear winner, but as so often the situation is more complicated. The integration of tiled shading into the final gathering shader, while an efficient and easy to implement solution, is inherently less flexible than clustered shading. For instance, \citet{olsson2012clustered} propose to use normals as another dimension besides the three spatial ones, further improving culling efficiency. While this is likely easy to integrate into the more flexible approach taken with clustered shading, the integrated tiled shading is constrained by the amount of available shared memory, which makes it challenging to take additional dimensions into account.
