Mention repository, mention SetStablePowerState.exe

--- a/chap-implementation.tex
+++ b/chap-implementation.tex
@@ -6,6 +6,8 @@
 
 This chapter will detail the implementation of the presented techniques. The next two sections will give an overview over the software as a whole and on the rendering pipeline, while the subsequent four sections describe the implementation of the RSM generation, ISM rendering, interleaved shading and clustered deferred shading.
 
+The full source code is available in the project's repository\footnote{\url{https://github.com/karyon/multiframesampling}} under the MIT licence.
+
 
 \section{Used Framework and Libraries}
 
