--- a/chap-introduction.tex
+++ b/chap-introduction.tex
@@ -24,7 +24,7 @@ In this thesis, we present an implementation of a rendering system using the man
 
 While lights and geometry are allowed to move, the system does not provide temporal stability in this case. Furthermore, it simulates only one light bounce, although the approach is not inherently limited in this regard.
 
-The full source code of the implementation is available under the ??? license.
+The full source code of the implementation is available in the project's repository\footnote{\url{https://github.com/karyon/multiframesampling}} under the MIT licence.
 
 \section{Structure of this Thesis}
 
