--- a/foo-thesis.tex
+++ b/foo-thesis.tex
@@ -115,30 +115,36 @@
 
 \chapter{purgatory}
 
-\todo[color=white]{many-light theory}
-- focusing on why this is a valid model
-- maybe explain clamping here and leave it out everywhere else?
+\todo{performance overview. how much time does everything need}
+\todo{make figures nicer}
+\todo{screenshot alignment stuff}
 
-\todo[color=white]{formatting requirements? like that comma after e.g. weirdness}
-
-\todo[color=white]{explain clamping in concept}
-
-\todo{explain/replace all ``have not implemented''}
-\todo{brighter version for print}
-\todo{cleanup references}
-
-
-\todo[color=yellow]{rename gi shader to final gathering. other renames?}
 \todo{what openGL version do i require? also, i should look up which dedicated GPUs support 4.5/4.4 and what Intels GPUs say. maybe point out the need for modern OpenGL more? also, how they make it easier to implement.}
-
-\todo[color=yellow]{investigate into interleaving via shared memory in 2x2 groups (that is, one work group reads 2x2 interleaved pixels instead of one)}
 
 \todo{do some pseudocode}
 \todo{more debug views, debug data visualizations}
 \todo{daniel's pipeline visualizations, see emails}
-\todo{4k tests}
 \todo[color=yellow]{fixed blue noise pattern when sampling RSM?}
-\todo{performance overview. how much time does everything need}
+
+\todo[color=yellow]{rename gi shader to final gathering. other renames?}
+
+
+\todo{4k tests}
+
+\todo[color=white]{many-light theory}
+- focusing on why this is a valid model
+- maybe explain clamping here and leave it out everywhere else?
+
+\todo[color=white]{explain clamping in concept}
+
+\todo[color=yellow]{investigate into interleaving via shared memory in 2x2 groups (that is, one work group reads 2x2 interleaved pixels instead of one)}
+
+
+\todo{cleanup repository. rebase and cut the first unrelated commits out? decide on repository name, and maybe github name.}
+\todo[color=white]{formatting requirements? like that comma after e.g. weirdness}
+\todo{brighter version for print}
+\todo{cleanup references}
+
 
 % \include{chap-examples}
 % \include{chap-moreexamples}
