Consistently lowercase global illumination, imperfect shadow maps etc.

--- a/chap-concept.tex
+++ b/chap-concept.tex
@@ -10,7 +10,7 @@ In this chapter, the presented global illumination system is explained on a conc
 
 \begin{figure}[h]
     \includegraphics[width=\textwidth]{graphics/GI_pipeline_concept_rough}
-    \caption{The Global Illumination pipeline presented in this thesis.}
+    \caption{The global illumination pipeline presented in this thesis.}
     \label{fig:GIPipelineConcept}
 \end{figure}
 
@@ -51,7 +51,7 @@ The original paper \citep{ritschel2008ism} converts the scene geometry to a poin
 \begin{figure}[htb]
 \centering
     \includegraphics[width=\textwidth]{graphics/ism_ritschel_08}
-  \caption{Illustration of Imperfect Shadow Maps. For each VPL, a different set of points, colored yellow and pink, representing the scene is chosen. These are rendered into one small shadowmap per VPL (top right). A pull-push postprocessing algorithm fills holes in the shadowmaps (bottom right). Figure reprinted from \citet{ritschel2008ism}.}
+  \caption{Illustration of imperfect shadow maps. For each VPL, a different set of points, colored yellow and pink, representing the scene is chosen. These are rendered into one small shadowmap per VPL (top right). A pull-push postprocessing algorithm fills holes in the shadowmaps (bottom right). Figure reprinted from \citet{ritschel2008ism}.}
   \label{fig:concept:ism_ritschel_08}
 \end{figure}
 
@@ -219,6 +219,4 @@ In most aspects we follow the standard approach for interleaved shading. The onl
 
 \todo{clustered or interleaved shading first?}
 \todo{interleaved shading vs interleaved sampling}
-\todo{capitalization of global illumination, interleaved shading, imperfect shadow maps etc}
-\todo{capitalization in captions}
 \todo{bilateral vs geometry-aware}
