--- a/chap-conclusion.tex
+++ b/chap-conclusion.tex
@@ -6,18 +6,18 @@
 
 In this thesis we have presented a rendering system that simulates global illumination at real-time framerates. It uses only a few milliseconds for computing indirect lighting, making it suitable for use in real-time applications on today's hardware.
 
-Imperfect Shadow Maps have been implemented and extended by a high-quality postprocessing. They show improved results compared to conventional point splatting, but the resulting quality is limited by the input data, a sparse set of points representing the scene. Using compute shaders for rendering single-pixel points into multiple shadow maps is a clear efficiency gain compared to using geometry shaders.
+Imperfect shadow maps have been implemented and extended by a high-quality postprocessing. They show improved results compared to conventional point splatting, but the resulting quality is limited by the input data, a sparse set of points representing the scene. Using compute shaders for rendering single-pixel points into multiple shadow maps is a clear efficiency gain compared to using geometry shaders.
 
 Performing interleaved shading with compute shaders instead of splitting buffers seems like a definitive improvement. While we have not made an explicit comparison, its near-perfect efficiency, ease of implementation, and the fact that it requires no additional memory make it the obvious choice when compute shaders are available on the given platform.
 
-Clustered Deferred Shading has been shown to have a relatively high overhead and thus is not the perfect candidate for light culling in a global illumination context using many-light methods. There are extensions, however, that could improve its culling efficiency to the point where it causes no slowdown in the worst case. Tiled Deferred Shading, on the other hand, is a clear performance win and again, rather easy to implement, but limited in its maximum culling efficiency.
+Clustered deferred shading has been shown to have a relatively high overhead and thus is not the perfect candidate for light culling in a global illumination context using many-light methods. There are extensions, however, that could improve its culling efficiency to the point where it causes no slowdown in the worst case. Tiled deferred shading, on the other hand, is a clear performance win and again, rather easy to implement, but limited in its maximum culling efficiency.
 
 \section{Future Work}
 
-Going beyond random point sampling for creating Imperfect Shadow Maps is desirable, since the randomness is limiting their quality. Implementing more advanced surface reconstruction techniques, starting with the full extent of the algorithm presented by \citet{Marroquim:2007:reconstruction}, would likely further enhance the ISM's quality.
+Going beyond random point sampling for creating imperfect shadow maps is desirable, since the randomness is limiting their quality. Implementing more advanced surface reconstruction techniques, starting with the full extent of the algorithm presented by \citet{Marroquim:2007:reconstruction}, would likely further enhance the ISM's quality.
 
 Given how common the usage of interleaved shading is, it is surprising that little work has been done to maximize the technique's impact. For instance, thoroughly investigating the correlation between performance and quality when changing the block size would give implementers a guideline on which block sizes to choose in which scenarios.
 
-There is still potential in the Clustered Deferred Shading technique, for instance by using surface normals for more efficient culling. Mipmapping the ISMs and using them for culling, performing an early shadow lookup for entire clusters of fragments, would be interesting as well.
+There is still potential in the clustered deferred shading technique, for instance by using surface normals for more efficient culling. Mipmapping the ISMs and using them for culling, performing an early shadow lookup for entire clusters of fragments, would be interesting as well.
 
 However, the final gathering phase is quite fast at least on high-end hardware, and, more importantly,  not detrimental to quality. While rendering the ISMs is fast as well, their quality is lacking and limiting the potential use of the presented technique. Improving their precision, e.\,g., by improving the point sampling or surface reconstruction or investigating triangle-based approaches, is in our view the path with the largest potential benefit.
